// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatDistanceToNow should format future dates 1`] = `
[
  "0 sec",
  "20 sec",
  "20 min",
  "1 hr",
  "1 day",
  "1 mo",
  "1 yr",
  "2 qtrs",
]
`;

exports[`formatDistanceToNow should format past dates 1`] = `
[
  "0 sec",
  "20 sec",
  "20 min",
  "1 hr",
  "1 day",
  "1 mo",
  "4 qtrs",
  "3 qtrs",
]
`;
